--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
-.DS_Store
-.dart_tool/
 
+.DS_Store
+.atom/
+.idea
+.vscode/
 .packages
 .pub/
-
 build/
-
+ios/.generated/
+packages
 .flutter-plugins
