--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   # not sqlite
   sqflite: ^0.10.0
   path_provider: ^0.4.1
+  rxdart: ^0.18.0
 
 dev_dependencies:
   flutter_test:
